--- a/templates/todos/create.html.twig
+++ b/templates/todos/create.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% form_theme form 'bootstrap_4_layout.html.twig' %}
+{% form_theme form 'bootstrap_5_layout.html.twig' %}
 
 {% block title %}
     Create Todo
 {% endblock %}
 
 {% block body %}
-    <h1>Create new todo</h1>
+    <h1 class="text-center">Create new todo</h1>
     {% for message in app.flashes('success') %}
         <div class="alert alert-success" role="alert">
             {{ message }}
