--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -25,7 +25,7 @@
 <body>
 <div class="d-flex flex-column justify-content-between min-vh-100">
     {% include 'partials/navbar.html.twig' %}
-    <div class="body container">
+    <div class="body container my-3">
         {% block body %}{% endblock %}
     </div>
     {% include 'partials/footer.html.twig' %}
