--- a/templates/todos/create.html.twig
+++ b/templates/todos/create.html.twig
@@ -14,4 +14,25 @@
         </div>
     {% endfor %}
     {{ form(form) }}
+    <table class="table table-hover">
+        <thead>
+        <tr>
+            <th scope="col">Name</th>
+            <th scope="col" colspan="2">Actions</th>
+        </tr>
+        </thead>
+        <tbody>
+        {% for todo in todos %}
+            <tr>
+                <td>{{ todo.name }}</td>
+                <td>
+                    <button type="button" class="btn btn-success">Edit</button>
+                </td>
+                <td>
+                    <button type="button" class="btn btn-warning">Delete</button>
+                </td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
 {% endblock %}
