--- a/templates/todos/create.html.twig
+++ b/templates/todos/create.html.twig
@@ -8,12 +8,26 @@
 
 {% block body %}
     <h1 class="text-center">Create new todo</h1>
+    {{ form_start(form, {'attr':{'novalidate':'novalidate'}}) }}
+    {% if (form_errors(form.name)) %}
+        <div class="alert alert-danger alert-dismissible fade show form-error" role="alert">
+            {{ form_errors(form.name) }}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    {% endif %}
     {% for message in app.flashes('success') %}
-        <div class="alert alert-success" role="alert">
+        <div class="alert alert-success alert-dismissible fade show" role="alert">
             {{ message }}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
     {% endfor %}
-    {{ form(form) }}
+
+    <div class="d-flex align-items-center mb-3">
+        {{ form_widget(form.name) }}
+        {{ form_widget(form.save) }}
+    </div>
+    {{ form_rest(form) }}
+    {{ form_end(form) }}
     <table class="table table-hover">
         <thead>
         <tr>
@@ -25,9 +39,6 @@
         {% for todo in todos %}
             <tr>
                 <td>{{ todo.name }}</td>
-                <td>
-                    <button type="button" class="btn btn-success">Edit</button>
-                </td>
                 <td>
                     <button type="button" class="btn btn-warning">Delete</button>
                 </td>
