--- a/templates/partials/footer.html.twig
+++ b/templates/partials/footer.html.twig
@@ -1,4 +1,4 @@
-<footer class='text-center bg-primary text-white py-3'>
+<footer class='text-center bg-primary text-white p-3'>
     Copyright reversed &copy. Written by
     <a href="https://github.com/lamkimphu258" class="text-white">
         Lam Kim Phu
