--- a/templates/todos/index.html.twig
+++ b/templates/todos/index.html.twig
@@ -3,12 +3,10 @@
 {% form_theme form 'bootstrap_5_layout.html.twig' %}
 
 {% block title %}
-    Create Todo
+    Todos
 {% endblock %}
 
 {% block body %}
-    <h1 class="text-center">Create new todo</h1>
-    {{ form_start(form, {'attr':{'novalidate':'novalidate'}}) }}
     {% if (form_errors(form.name)) %}
         <div class="alert alert-danger alert-dismissible fade show form-error" role="alert">
             {{ form_errors(form.name) }}
@@ -21,31 +19,36 @@
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
     {% endfor %}
+    {% for message in app.flashes('error') %}
+        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+            {{ message }}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    {% endfor %}
 
+    <h1 class="text-center">Create new todo</h1>
+    {{ form_start(form, {'attr':{'novalidate':'novalidate'}}) }}
     <div class="d-flex align-items-center mb-3">
         {{ form_widget(form.name) }}
         {{ form_widget(form.save) }}
     </div>
     {{ form_rest(form) }}
     {{ form_end(form) }}
-    <table class="table table-hover">
-        <thead>
-        <tr>
-            <th scope="col">Name</th>
-            <th scope="col">Actions</th>
-        </tr>
-        </thead>
-        <tbody>
+    <div class="d-flex justify-content-between mt-5 fw-bold border-bottom">
+        <p>Name</p>
+        <p>Actions</p>
+    </div>
+    <div class="d-flex justify-content-between mt-3">
         {% for todo in todos %}
             <tr>
                 <td>{{ todo.name }}</td>
                 <td>
                     <button type="button" class="btn btn-warning">
-                        <a href="{{ path('todo-delete', {'slug': todo.slug}) }}" class="text-decoration-none link-dark">Delete</a>
+                        <a href="{{ path('app_todo_delete', {'slug': todo.slug}) }}"
+                           class="text-decoration-none link-dark">Delete</a>
                     </button>
                 </td>
             </tr>
         {% endfor %}
-        </tbody>
-    </table>
+    </div>
 {% endblock %}
