--- a/templates/todos/index.html.twig
+++ b/templates/todos/index.html.twig
@@ -34,21 +34,21 @@
     </div>
     {{ form_rest(form) }}
     {{ form_end(form) }}
-    <div class="d-flex justify-content-between mt-5 fw-bold border-bottom">
-        <p>Name</p>
-        <p>Actions</p>
+    <div class="row border-bottom mt-5 fw-bold">
+        <p class="col-10">Name</p>
+        <p class="col-2">Actions</p>
     </div>
-    <div class="d-flex justify-content-between mt-3">
-        {% for todo in todos %}
-            <tr>
-                <td>{{ todo.name }}</td>
-                <td>
-                    <button type="button" class="btn btn-warning">
-                        <a href="{{ path('app_todo_delete', {'slug': todo.slug}) }}"
-                           class="text-decoration-none link-dark">Delete</a>
-                    </button>
-                </td>
-            </tr>
-        {% endfor %}
-    </div>
+    {% for todo in todos %}
+        <div class="row border-bottom py-3">
+            <div class="col-10">
+                <p>{{ todo.name }}</p>
+            </div>
+            <div class="col-2">
+                <a href="{{ path('app_todo_delete', {'slug': todo.slug}) }}"
+                   class="btn btn-warning text-decoration-none link-dark">Delete</a>
+                <a href="{{ path('app_todo_update', {'slug': todo.slug}) }}"
+                   class="btn btn-secondary text-decoration-none link-white">Update</a>
+            </div>
+        </div>
+    {% endfor %}
 {% endblock %}
