--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -29,7 +29,7 @@
         </div>
     #}
 
-    <button class="btn btn-lg btn-primary mt-3" type="submit">
+    <button class="btn btn-primary mt-3" type="submit">
         Sign in
     </button>
 </form>
