--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -6,5 +6,11 @@
 
 {% block body %}
     <h1 class="text-center">Register</h1>
+    {% for message in app.flashes('error') %}
+        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+            {{ message }}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    {% endfor %}
     {{ form(form) }}
 {% endblock %}
