Feature: add send email to new user
When new user register their account successfully, user will receive an
email to welcome them to Todolo.

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,8 +4,11 @@
 
 {% block body %}
     <div class="d-flex flex-column justify-content-center align-items-center">
+        <img class="mb-5" style="width: 500px; height: 500px;"
+             src="{{ asset('build/images/page/checklist.79aefcf7.gif') }}"
+             alt="todo list">
         <h1 class="mb-3">
-            Welcome to Todolo - Where you track your todo.
+            Welcome to Todolo - Where you track your work.
         </h1>
         <a class="btn btn-primary" href="{{ path('app_todo_index') }}">
             Let's get started
