--- a/templates/todos/index.html.twig
+++ b/templates/todos/index.html.twig
@@ -7,12 +7,6 @@
 {% endblock %}
 
 {% block body %}
-    {% if (form_errors(form.name)) %}
-        <div class="alert alert-danger alert-dismissible fade show form-error" role="alert">
-            {{ form_errors(form.name) }}
-            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-        </div>
-    {% endif %}
     {% for message in app.flashes('success') %}
         <div class="alert alert-success alert-dismissible fade show" role="alert">
             {{ message }}
@@ -28,11 +22,7 @@
 
     <h1 class="text-center">Create new todo</h1>
     {{ form_start(form, {'attr':{'novalidate':'novalidate'}}) }}
-    <div class="d-flex align-items-center mb-3">
-        {{ form_widget(form.name) }}
-        {{ form_widget(form.save) }}
-    </div>
-    {{ form_rest(form) }}
+    {{ form_errors(form) }}
     {{ form_end(form) }}
     <div class="row border-bottom mt-5 fw-bold">
         <p class="col-10">Name</p>
