Feature: add sending newsletter to subscriber
Send email to tell user who subscribe to newsletter about what news in our system every week.

--- a/templates/email/weekly-report.html.twig
+++ b/templates/email/weekly-report.html.twig
@@ -13,9 +13,11 @@
     <a href="{{ url('app_home') }}">
         <img style="width: 300px; height: 300px;" src="{{ email.image('@images/email/logo.svg') }}" alt="">
     </a>
-    <h1>Welcome to Todolo</h1>
-    <p>Hello {{ email.toName }}</p>
-    <p>I am very happy to welcome you to Todolo. Wish the best to you.</p>
+    <h1>Weekly Report to Todolo upgrades</h1>
+    <p>In this week, we add some more new features. Hope you enjoy it</p>
+    <button>
+        <a href="{{ url('app_home') }}">Access our page</a>
+    </button>
 </div>
 </body>
 </html>
