--- a/templates/email/weekly-report.html.twig
+++ b/templates/email/weekly-report.html.twig
@@ -11,7 +11,7 @@
 <body>
 <div class="text-center">
     <a href="{{ url('app_home') }}">
-        <img style="width: 300px; height: 300px;" src="{{ email.image('@images/email/logo.svg') }}" alt="">
+        <img style="width: 300px; height: 300px;" src="{{ absolute_url('build/images/email/logo.1a85e075.svg') }}" alt="">
     </a>
     <h1>Weekly Report to Todolo upgrades</h1>
     <p>In this week, we add some more new features. Hope you enjoy it</p>
