--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,5 +1,15 @@
-@import '~bootstrap/dist/css/bootstrap.css';
+@import 'bootstrap.css';
 
 body {
-    background-color: lightgray;
+    background-color: #f2f2f2;
+}
+
+.navbar-nav .nav-item .nav-link img {
+    width: 50px;
+    height: 50px;
+}
+
+.profile {
+    width: 150px;
+    height: 150px;
 }
