--- a/templates/partials/navbar.html.twig
+++ b/templates/partials/navbar.html.twig
@@ -13,7 +13,7 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                            data-bs-toggle="dropdown" aria-expanded="false">
-                            <img src="https://i.pravatar.cc/30" alt="" class="rounded-circle">
+                            <img src="{{ asset('uploads/avatars/' ~ app.user.avatarFilename) }}" alt="avatar" class="rounded-circle"/>
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="{{ path('app_user_get', {'id':app.user.id}) }}">My
