--- a/templates/partials/navbar.html.twig
+++ b/templates/partials/navbar.html.twig
@@ -13,7 +13,12 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                            data-bs-toggle="dropdown" aria-expanded="false">
-                            <img src="{{ asset('uploads/avatars/' ~ app.user.avatarFilename) }}" alt="avatar" class="rounded-circle"/>
+                            {% if not app.user.avatarFilename %}
+                                <img src="https://avatars.dicebear.com/v2/male/:seed.svg" class="rounded-circle"/>
+                            {% else %}
+                                <img src="{{ asset('uploads/avatars/' ~ app.user.avatarFilename) }}" alt="avatar"
+                                     class="rounded-circle"/>
+                            {% endif %}
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="{{ path('app_user_get', {'id':app.user.id}) }}">My
