--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,7 +11,7 @@
          {{ encore_entry_script_tags('app') }}
     {% endblock %}
 </head>
-<body>
+<body class="bg-light">
 <div class="d-flex flex-column justify-content-between min-vh-100">
     {% include 'partials/navbar.html.twig' %}
     <div class="body container my-3">
