--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,6 +3,12 @@
 {% block title %}Homepage{% endblock %}
 
 {% block body %}
+    {% for message in app.flashes('success') %}
+        <div class="alert alert-success alert-dismissible fade show" role="alert">
+            {{ message }}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    {% endfor %}
     <div class="d-flex flex-column justify-content-center align-items-center">
         <img class="mb-5" style="width: 500px; height: 500px;"
              src="{{ asset('build/images/page/checklist.79aefcf7.gif') }}"
