Feature: Add admin login
Add login page for admin. If user login successfully, they will go
direct to admin dashboard. If not, they will be asked to login again
until credential is correct.

Add easyadmin to admin to control user and todos.

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -9,3 +9,11 @@
     width: 150px;
     height: 150px;
 }
+
+div.card.user {
+    background-color: #0c4a6e;
+}
+
+div.card.todo {
+    background-color: #0d5e42;
+}
